--- a/src/i18n.Demo/i18n.Demo.csproj
+++ b/src/i18n.Demo/i18n.Demo.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,12 +27,12 @@
     </Content>
   </ItemGroup>
 
-  <Target Name="GenerateTemplatePotFile" BeforeTargets="BeforeBuild" Condition="!$(IsCIBuild)">
+  <!--<Target Name="GenerateTemplatePotFile" BeforeTargets="BeforeBuild" Condition="!$(IsCIBuild)">
     <Exec Command="pot" />
     <ItemGroup>
       <Content Include="locale\nb-NO.po" Link="locale\nb-NO.po" CopyToPublishDirectory="PreserveNewest" Visible="false" />
       <Content Include="locale\messages.pot" Link="locale\en-US.po" CopyToPublishDirectory="PreserveNewest" Visible="false" />
     </ItemGroup>
-  </Target>
+  </Target>-->
 
 </Project>
